# Coursework_Racegame

./: AllTerrainBoots.cpp  AllTerrainBoots.h  Broomstick.cpp  Broomstick.h  CMakeLists.txt  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  Eagle.cpp  Eagle.h  FlyingCarpet.cpp  FlyingCarpet.h  HighspeedCamel.cpp  HighspeedCamel.h  RaceDetails.cpp  RaceDetails.h  Vehicle.cpp  Vehicle.h  main.cpp
